# VAC_THERAPY

arduino_code_base/main/: ADS1115.h  block_detection.ino  bluetooth.ino  cmd_Response.ino  continuous_mode.ino  data_frame.h  feul_gauge.ino  intermitten.ino  leak_detection.ino  macros.h  main.ino  mode_interruptions.ino  modes.ino  read_pressure.ino  read_set_parameter.ino  runtime.ino  todo_commands.h  uart.ino  validate_canister.ino
boards/: esp32_devkitc_wroom_procpu.overlay
src/: adc.c  i2c.c  spi.c  uart.c
zephyr_code_base/: CMakeLists.txt  prj.conf
zephyr_code_base/include/: rc522.h
zephyr_code_base/src/: bluetooth.c  dac.c  gpio.c
